# desk-ai

./: .gitignore  BUILD.md  CHANGELOG.md  CHAT_OUTPUT_FIXES.md  COMPLETE_FIX_SUMMARY.md  CURRENT_STATE.md  DISTRIBUTION_GUIDE.md  DROPDOWN_EMPTY_FIX.md  ELEVATED_COMMANDS.md  FIXES_APPLIED.md  ICON_GENERATION.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  LINUX_TESTING.md  LINUX_TRAY_SETUP.md  NEXT_STEPS.md  QUICK_TEST.md  README.md  REFACTOR.md  REVIEW.md  SECURITY.md  SETTINGS_FIXES.md  SETUP_COMPLETE.md  TAURI_2_FIX.md  TESTING.md  TESTING_SESSION.md  TEST_COVERAGE_REPORT.md  TODO.md  TRAY_IMPLEMENTATION.md  WINDOWS_BUILD.md  build-backend.bat  build.sh  generate-icons.sh  index.html  package-lock.json  package.json  tailwind.config.ts  test_fetch.html  test_models_api.html  test_tool_flow.py.example  (+2 more)
.github/workflows/: build.yml  release.yml
.husky/: pre-commit
assets/: build-backend.sh  generate-icons.sh
docs/: DEVELOPMENT.md  TODO.md
python/: backend.py  build_standalone.py  requirements.txt
rust-backend/: Cargo.toml
rust-backend/src/: config.rs  logger.rs  main.rs  ndjson.rs  providers.rs  tools.rs  types.rs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  main.rs
src/components/: ApprovalModal.tsx  Chat.tsx  SettingsPanel.tsx  StatusIndicator.tsx  TerminalPane.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  switch.tsx  textarea.tsx  tooltip.tsx
src/test/: App.test.tsx  ApprovalModal.test.tsx  Chat.test.tsx  SettingsPanel.test.tsx  StatusIndicator.test.tsx  setup.ts  types.test.ts  utils.test.ts
