[package]
name = "desk-ai-backend"
version = "0.1.0"
edition = "2021"
authors = ["Desk AI"]
license = "MIT"
description = "Rust backend for Desk AI"

[[bin]]
name = "desk-ai-backend"
path = "src/main.rs"

[dependencies]
async-openai = "0.29"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
regex = "1.10"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
once_cell = "1.19"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
