[package]
name = "desk-ai"
version = "0.1.0"
description = "Desktop AI assistant"
authors = ["Desk AI"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-open", "window-all"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
which = "4.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
