[package]
name = "desk-ai"
version = "0.3.0"
description = "Desktop AI assistant"
authors = ["Desk AI"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
which = "4.4"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
